@@ -1,6 +1,6 @@
 Package: Rcmdr
 Version: 2.0-3
-Date: 2013/12/14
+Date: 2013/12/22
 Title: R Commander
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
     person("Milan", "Bouchet-Valat", role = "aut"),
